# laba2

./: CMakeLists.txt  README.md  algorithms.h  array_sequence.h  bit_sequence.h  immutable_piecewise_function.h  interval.h  io_utils.h  list_sequence.h  main.cpp  mutable_piecewise_function.h  option.h  piecewise_algorithms.h  piecewise_enumerator.h  piecewise_function.h  piecewise_operators.h  segment.h  segment_io.h  sequence.h  sequence_crtp.h  tests.cpp  tests_piecewise.cpp
